# stm32cube-cmake

./: CMakeLists.txt  README.md  stm32cube.cmake
